; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_basebackup/extr_receivelog.c_CheckCopyStreamStop.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_basebackup/extr_receivelog.c_CheckCopyStreamStop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 (i32, i32, i32)* }

@still_sending = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"could not send copy-end packet: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_4__*, i32, i32*)* @CheckCopyStreamStop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckCopyStreamStop(i32* %0, %struct.TYPE_4__* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %10 = load i32, i32* @still_sending, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %41

12:                                               ; preds = %4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = load i64 (i32, i32, i32)*, i64 (i32, i32, i32)** %14, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = call i64 %15(i32 %16, i32 %19, i32 0)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %41

22:                                               ; preds = %12
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @close_walfile(%struct.TYPE_4__* %23, i32 %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %22
  store i32 0, i32* %5, align 4
  br label %42

28:                                               ; preds = %22
  %29 = load i32*, i32** %6, align 8
  %30 = call i64 @PQputCopyEnd(i32* %29, i32* null)
  %31 = icmp sle i64 %30, 0
  br i1 %31, label %36, label %32

32:                                               ; preds = %28
  %33 = load i32*, i32** %6, align 8
  %34 = call i64 @PQflush(i32* %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %32, %28
  %37 = load i32*, i32** %6, align 8
  %38 = call i32 @PQerrorMessage(i32* %37)
  %39 = call i32 @pg_log_error(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %38)
  store i32 0, i32* %5, align 4
  br label %42

40:                                               ; preds = %32
  store i32 0, i32* @still_sending, align 4
  br label %41

41:                                               ; preds = %40, %12, %4
  store i32 1, i32* %5, align 4
  br label %42

42:                                               ; preds = %41, %36, %27
  %43 = load i32, i32* %5, align 4
  ret i32 %43
}

declare dso_local i32 @close_walfile(%struct.TYPE_4__*, i32) #1

declare dso_local i64 @PQputCopyEnd(i32*, i32*) #1

declare dso_local i64 @PQflush(i32*) #1

declare dso_local i32 @pg_log_error(i8*, i32) #1

declare dso_local i32 @PQerrorMessage(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
